# s2-geometry-library

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  s2.pc.in
geometry/: s1angle.cc  s1interval.cc  s2.cc  s2cap.cc  s2cell.cc  s2cellid.cc  s2cellunion.cc  s2edgeindex.cc  s2edgeutil.cc  s2latlng.cc  s2latlngrect.cc  s2loop.cc  s2pointregion.cc  s2polygon.cc  s2polygonbuilder.cc  s2polyline.cc  s2r2rect.cc  s2region.cc  s2regioncoverer.cc  s2regionintersection.cc  s2regionunion.cc
geometry/base/: basictypes.h  casts.h  int128.cc  int128.h  logging.cc  logging.h  macros.h  port.h  stl_decl.h  stringprintf.cc  stringprintf.h  strtoint.cc  strtoint.h  type_traits.h
geometry/s2/: hash_map_backward.h  r1interval.h  s1angle.h  s1interval.h  s2.h  s2cap.h  s2cell.h  s2cellid.h  s2cellunion.h  s2edgeindex.h  s2edgeutil.h  s2latlng.h  s2latlngrect.h  s2loop.h  s2pointregion.h  s2polygon.h  s2polygonbuilder.h  s2polyline.h  s2r2rect.h  s2region.h  s2regioncoverer.h  s2regionintersection.h  s2regionunion.h
geometry/strings/: ascii_ctype.cc  ascii_ctype.h  split.cc  split.h  stringprintf.cc  stringprintf.h  strutil.cc  strutil.h
geometry/util/coding/: coder.cc  coder.h  varint.cc  varint.h
geometry/util/endian/: endian.h
geometry/util/hash/: hash.cc  hash.h  hash_jenkins_lookup2.h
geometry/util/math/: mathlimits.cc  mathlimits.h  mathutil.cc  mathutil.h  matrix3x3-inl.h  vector2-inl.h  vector2.h  vector3-inl.h  vector3.h  vector4-inl.h  vector4.h
geometry/util/math/exactfloat/: exactfloat.cc  exactfloat.h
python/: base.i  s2.i
